--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+aiohttp==3.6.0
+async-timeout==3.0.1
+asyncio==3.4.3
+attrs==19.1.0
 certifi==2019.9.11
 chardet==3.0.4
 idna==2.8
+idna-ssl==1.1.0
+multidict==4.5.2
 numpy==1.17.2
 pandas==0.25.1
 python-dateutil==2.8.0
@@ -8,5 +14,7 @@ pytz==2019.2
 requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.8
+typing-extensions==3.7.4
 urllib3==1.25.3
 xlrd==1.2.0
+yarl==1.3.0
